--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,30 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <main class="main">
+    <main class="header">
       <form class="search-form" id="search-form">
-        <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-        <button type="submit">Search</button>
+        <input class = "input" type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+        <button type="submit" name="button" class="button">Search</button>
       </form>
-</main>
+    </main>
+    <div class="gallery">
+      <!-- <div class="photo-card">
+        <img src="" alt="" loading="lazy" />
+        <div class="info">
+          <p class="info-item">
+            <b>Likes</b>
+          </p>
+          <p class="info-item">
+            <b>Views</b>
+          </p>
+          <p class="info-item">
+            <b>Comments</b>
+          </p>
+          <p class="info-item">
+            <b>Downloads</b>
+          </p>
+        </div>
+      </div> -->
+    </div>
   </body>
 </html>
