--- a/src/index.html
+++ b/src/index.html
@@ -33,5 +33,7 @@
         </div>
       </div> -->
     </div>
+    <button type="button" class="load-more">Load more</button>
+
   </body>
 </html>
